--- a/extra-addons/pym_contacts/views/pym_report.xml
+++ b/extra-addons/pym_contacts/views/pym_report.xml
@@ -29,49 +29,123 @@
             <field name="paperformat_id" ref="pym_contacts.a5_low_margin" />
         </record>
     <template id="pym_contacts.custom_header">
-        <div style="font-size: 17pt;font-family:Verdana,Arial,sans;letter-spacing: 0.3em">
-            <div class="row" style="font-size: 17pt;font-family:Verdana;letter-spacing: 0.3em">
-                <div style="padding-left: 0mm;width: 25mm;"/>
+
+        <div style="width: 140mm;height: 60mm;">
+        </div>
+        <div style="font-size: 17pt;font-family:Verdana, sans-serif;letter-spacing: 2.5pt;line-height: 2;">
+            <div class="row">
+                <div style="padding-left: 0mm;width: 20mm;"/>
                 <div style="padding-left: 0mm;width: 135mm;">
                         <span t-field="o.invoice_date"/>
                 </div>
-                <div style="padding-left: 0mm;width: 40mm;"/>
-                <div style="padding-left: 0mm;width: 50mm;">
+                <div style="padding-left: 0mm;width: 30mm;"/>
+                <div style="padding-left: 0mm;width: 70mm;">
                         <span t-field="o.partner_id.vat"/>
                 </div>
             </div>
-            <div class="row" style="font-size: 17pt;font-family:Verdana;letter-spacing: 0.3em">
-                <div style="padding-left: 0px;width: 25mm"/>
+            <div class="row" >
+                <div style="padding-left: 0px;width: 20mm"/>
                 <div style="padding-left: 0px;width: 240mm;">
                         <span t-field="o.partner_id.name"/>
                 </div>
             </div>
             <div class="row">
-
-                <div  style="padding-left: 0px;width: 40mm;"/>
-                <div  style="padding-left: 0px;width: 160mm;">
+                <div  style="padding-left: 0px;width: 25mm;"/>
+                <div  style="padding-left: 0px;width: 180mm;">
                     <span t-field="o.partner_id.street"/>
                     <span t-field="o.partner_id.street2"/>
                 </div>
-                <div style="padding-left: 0px;width: 15mm;"/>
-                <div style="padding-left: 0px;width: 50mm;">
+                <div style="padding-left: 0px;width: 1mm;"/>
+                <div style="padding-left: 0px;width: 100mm;">
                     <span t-field="o.partner_id.phone"/><span t-field="o.partner_id.mobile"/>
                 </div>
             </div>
         </div>
-        <br/>
+        <div style="width: 140mm;height: 10mm;">
+        </div>
     </template>
 
         <template id="pym_contacts.report_pre_printed_invoice" inherit_id="account.report_invoice_document" primary="True">
-            <t t-set="o" position="after">
-            <t t-set="custom_header" t-value="'pym_contacts.custom_header'"/>
-            <br/>
+            <t t-set="o" position="before">
+                <t t-set="custom_header" t-value="'pym_contacts.custom_header'"/>
+                <t t-set="custom_footer"><div></div></t>
             </t>
             <t t-set="address" position="replace"/>
 
             <!-- remove default document title -->
             <h2 position="replace"/>
+            <xpath expr='//div[@id="informations"]' position="replace">
+                <div id="informations">
+                </div>
+            </xpath>
+            <xpath expr='//table[@name="invoice_line_table"]' position="replace">
+                <div style="width:140mm; height:57mm"/>
+                <div>
+                    <table name="invoice_line_table">
+                        <tbody  style="font-size: 8pt;font-family:Verdana, sans-serif;letter-spacing: 3pt;">
+                            <t t-set="current_subtotal" t-value="0"/>
+                            <t t-set="lines" t-value="o.invoice_line_ids.sorted(key=lambda l: (-l.sequence, l.date, l.move_name, -l.id), reverse=True)"/>
 
+                            <t t-foreach="lines" t-as="line">
+                                <t t-set="current_subtotal" t-value="current_subtotal + line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
+                                <t t-set="current_subtotal" t-value="current_subtotal + line.price_total" groups="account.group_show_line_subtotals_tax_included"/>
+
+                                <tr t-att-class="'bg-200 font-weight-bold o_line_section' if line.display_type == 'line_section' else 'font-italic o_line_note' if line.display_type == 'line_note' else ''">
+                                    <t t-if="not line.display_type" name="account_invoice_line_accountable">
+                                        <td name="account_invoice_line_name"><span t-field="line.name" t-options="{'widget': 'text'}"/></td>
+                                        <td class="text-right">
+                                            <span t-field="line.quantity"/>
+                                            <span t-field="line.product_uom_id"  groups="uom.group_uom"/>
+                                        </td>
+                                        <td t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
+                                            <span class="text-nowrap" t-field="line.price_unit"/>
+                                        </td>
+                                        <td t-if="display_discount" t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
+                                            <span class="text-nowrap" t-field="line.discount"/>
+                                        </td>
+                                        <td class="text-right o_price_total">
+                                            <span class="text-nowrap" t-field="line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
+                                        </td>
+                                    </t>
+                                    <t t-if="line.display_type == 'line_section'">
+                                        <td colspan="99">
+                                            <span t-field="line.name" t-options="{'widget': 'text'}"/>
+                                        </td>
+                                        <t t-set="current_section" t-value="line"/>
+                                        <t t-set="current_subtotal" t-value="0"/>
+                                    </t>
+                                    <t t-if="line.display_type == 'line_note'">
+                                        <td colspan="99">
+                                            <span t-field="line.name" t-options="{'widget': 'text'}"/>
+                                        </td>
+                                    </t>
+                                </tr>
+
+                                <t t-if="current_section and (line_last or lines[line_index+1].display_type == 'line_section')">
+                                    <tr class="is-subtotal text-right">
+                                        <td colspan="99">
+                                            <strong class="mr16">Subtotal IN</strong>
+                                            <span
+                                                t-esc="current_subtotal"
+                                                t-options='{"widget": "monetary", "display_currency": o.currency_id}'
+                                            />
+                                        </td>
+                                    </tr>
+                                </t>
+                            </t>
+                        </tbody>
+                    </table>
+                </div>
+            </xpath>
+            <xpath expr='//div[@id="total"]' position="replace">
+                <div id="total">
+                </div>
+            </xpath>
+            <xpath expr='//p[@name="payment_communication"]' position="replace"/>
+            <xpath expr='//p[@name="payment_term"]' position="replace"/>
+            <xpath expr='//p[@name="comment"]' position="replace"/>
+            <xpath expr='//p[@name="note"]' position="replace"/>
+            <xpath expr='//p[@name="incoterm"]' position="replace"/>
         </template>
     <!-- FIXME: Temp fix to allow fetching invoice_documemt in Studio Reports with localisation -->
     <template id="pym_contacts.report_invoice" inherit_id="account.report_invoice">
