--- a/extra-addons/pym_config/views/pym_report.xml
+++ b/extra-addons/pym_config/views/pym_report.xml
@@ -2,7 +2,7 @@
 
 <odoo>
     <data>
-        <record id="pym_contacts.a5_low_margin" model="report.paperformat">
+        <record id="pym_config.a5_low_margin" model="report.paperformat">
             <field name="name">A5 Low margin Format</field>
             <field name="default" eval="True"/>
             <field name="format">A5</field>
@@ -17,52 +17,53 @@
             <field name="header_spacing">0</field>
             <field name="dpi">240</field>
         </record>
-        <record id="pym_contacts.pre_printed_invoice" model="ir.actions.report">
+        <record id="pym_config.pre_printed_invoice" model="ir.actions.report">
             <field name="name">Factura Pre-impresa</field>
             <field name="model">account.move</field>
             <field name="report_type">qweb-pdf</field>
-            <field name="report_name">pym_contacts.report_invoice</field>
-            <field name="report_file">pym_contacts.report_invoice</field>
+            <field name="report_name">pym_config.report_invoice</field>
+            <field name="report_file">pym_config.report_invoice</field>
             <field name="print_report_name">(object._get_report_base_filename())</field>
             <field name="binding_model_id" ref="account.model_account_move"/>
             <field name="binding_type">report</field>
-            <field name="paperformat_id" ref="pym_contacts.a5_low_margin" />
+            <field name="paperformat_id" ref="pym_config.a5_low_margin" />
         </record>
-    <template id="pym_contacts.custom_header">
-        <div style="width: 120mm;height: 72mm;"/>
-        <div style="height: 40mm; font-family:'Arial','sans-serif';font-size: 16pt;line-height: 2.5;letter-spacing: 2.6pt;">
-            <div class="row">
-                <div style="padding-left: 0mm;width: 20mm;"/>
-                <div style="padding-left: 0mm;width: 150mm;">
-                        <span t-field="o.invoice_date"/>
+
+    <template id="pym_config.custom_header">
+
+            <div style="position:absolute;left: 0mm;top: 45mm;border: 1px solid green;width:240mm;height: 27mm;font-family:'Arial','sans-serif';font-size: 10pt;line-height: 2.5;letter-spacing: 2.6pt;">
+                <div>
+                    <div style="display:inline-block;width: 20mm;border: 1px solid blue;"></div>
+                    <div style="display:inline-block;width: 40mm;border: 1px solid green;">
+                            <span t-field="o.invoice_date"/>
+                    </div>
+                    <div style="display:inline-block;width: 40mm;border: 1px solid yellow;"></div>
+                    <div style="display:inline-block;width: 50mm;border: 1px solid blue;">
+                            <span t-field="o.partner_id.vat"/>
+                    </div>
                 </div>
-                <div style="padding-left: 0mm;width: 40mm;"/>
-                <div style="padding-left: 0mm;width: 70mm;">
-                        <span t-field="o.partner_id.vat"/>
+                <div >
+                    <div style="display:inline-block;width: 20mm;padding-left: 0mm;border: 1px solid red;"/>
+                    <div style="display:inline-block;width: 200mm;padding-left: 0mm;border: 1px solid green;">
+                            <span t-field="o.partner_id.name"/>
+                    </div>
+                </div>
+                <div class="row">
+                    <div  style="display:inline-block;width: 28mm;padding-left: 0px;border: 1px solid black;"/>
+                    <div  style="display:inline-block;width: 130mm;padding-left: 0px;border: 1px solid green;">
+                        <span t-field="o.partner_id.direccion"/>
+                    </div>
+                    <div style="display:inline-block;width: 20mm;padding-left: 0px;border: 1px solid blue;"/>
+                    <div style="display:inline-block;width: 55mm;padding-left: 0px;border: 1px solid green;">
+                        <span t-field="o.partner_id.phone"/><span t-field="o.partner_id.mobile"/>
+                    </div>
                 </div>
             </div>
-            <div class="row" >
-                <div style="padding-left: 0mm;width: 20mm"/>
-                <div style="padding-left: 0mm;width: 240mm;">
-                        <span t-field="o.partner_id.name"/>
-                </div>
-            </div>
-            <div class="row">
-                <div  style="padding-left: 0px;width: 28mm;"/>
-                <div  style="padding-left: 0px;width: 165mm;">
-                    <span t-field="o.partner_id.direccion"/>
-                </div>
-                <div style="padding-left: 0px;width: 40mm;"/>
-                <div style="padding-left: 0px;width: 80mm;">
-                    <span t-field="o.partner_id.phone"/><span t-field="o.partner_id.mobile"/>
-                </div>
-            </div>
-        </div>
     </template>
 
-    <template id="pym_contacts.report_pre_printed_invoice" inherit_id="account.report_invoice_document" primary="True">
-            <t t-set="o" position="before">
-                <t t-set="custom_header" t-value="'pym_contacts.custom_header'"/>
+    <template id="pym_config.report_pre_printed_invoice" inherit_id="account.report_invoice_document" primary="True">
+            <t t-set="o" position="after">
+                <t t-set="custom_header" t-value="'pym_config.custom_header'"/>
                 <t t-set="custom_footer"><div></div></t>
             </t>
             <t t-set="address" position="replace"/>
@@ -77,7 +78,7 @@
 
             <xpath expr='//table[@name="invoice_line_table"]' position="replace">
                 <div style="width:140mm; height:75mm"/>
-                <div  style="height:164mm;font-family:'Arial','sans-serif';font-size: 10pt;line-height: 2;letter-spacing: 2.3pt;">
+                <div  style="height:164mm;font-family:'Arial','sans-serif';font-size: 10pt;line-height: 2;letter-spacing: normal;">
                     <table name="invoice_line_table" >
                         <tbody >
                             <t t-set="current_subtotal" t-value="0"/>
@@ -103,7 +104,7 @@
                                         <td t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}" style="width: 22mm;">
                                             <span class="text-nowrap" t-field="line.price_unit"/>
                                         </td>
-                                        <td class="text-right o_price_total" style="width: 30mm;">
+                                        <td class="text-right" style="width: 35mm;text-align: right;margin-right: 1px;padding-left: 1px;padding-right: 20px;border: 1px solid blue;">
                                             <span class="text-nowrap" t-field="line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
                                         </td>
                                     </t>
@@ -160,9 +161,9 @@
             <xpath expr='//p[@name="incoterm"]' position="replace"/>
     </template>
     <!-- FIXME: Temp fix to allow fetching invoice_documemt in Studio Reports with localisation -->
-    <template id="pym_contacts.report_invoice" inherit_id="account.report_invoice">
+    <template id="pym_config.report_invoice" inherit_id="account.report_invoice">
         <xpath expr='//t[@t-call="account.report_invoice_document"]' position="replace">
-                <t t-call="pym_contacts.report_pre_printed_invoice" t-lang="lang"/>
+                <t t-call="pym_config.report_pre_printed_invoice" t-lang="lang"/>
         </xpath>
     </template>
     </data>
