--- a/extra-addons/pym_config/views/pym_report.xml
+++ b/extra-addons/pym_config/views/pym_report.xml
@@ -31,29 +31,29 @@
 
     <template id="pym_config.custom_header">
 
-            <div style="position:absolute;left: 0mm;top: 45mm;border: 1px solid green;width:240mm;height: 27mm;font-family:'Arial','sans-serif';font-size: 10pt;line-height: 2.5;letter-spacing: 2.6pt;">
+            <div style="position:absolute;left: 0mm;top: 54mm;border: 1px solid green;width:240mm;height: 35mm;font-family:'Arial','sans-serif';font-size: 12pt;line-height: 2.5;letter-spacing: 2.3pt;">
                 <div>
-                    <div style="display:inline-block;width: 20mm;border: 1px solid blue;"></div>
+                    <div style="display:inline-block;width: 12mm;border: 1px solid blue;"></div>
                     <div style="display:inline-block;width: 40mm;border: 1px solid green;">
                             <span t-field="o.invoice_date"/>
                     </div>
-                    <div style="display:inline-block;width: 40mm;border: 1px solid yellow;"></div>
+                    <div style="display:inline-block;width: 110mm;border: 1px solid yellow;"></div>
                     <div style="display:inline-block;width: 50mm;border: 1px solid blue;">
                             <span t-field="o.partner_id.vat"/>
                     </div>
                 </div>
                 <div >
-                    <div style="display:inline-block;width: 20mm;padding-left: 0mm;border: 1px solid red;"/>
+                    <div style="display:inline-block;width: 12mm;padding-left: 0mm;border: 1px solid red;"/>
                     <div style="display:inline-block;width: 200mm;padding-left: 0mm;border: 1px solid green;">
                             <span t-field="o.partner_id.name"/>
                     </div>
                 </div>
                 <div class="row">
-                    <div  style="display:inline-block;width: 28mm;padding-left: 0px;border: 1px solid black;"/>
+                    <div  style="display:inline-block;width: 20mm;padding-left: 0px;border: 1px solid black;"/>
                     <div  style="display:inline-block;width: 130mm;padding-left: 0px;border: 1px solid green;">
                         <span t-field="o.partner_id.direccion"/>
                     </div>
-                    <div style="display:inline-block;width: 20mm;padding-left: 0px;border: 1px solid blue;"/>
+                    <div style="display:inline-block;width: 25mm;padding-left: 0px;border: 1px solid blue;"/>
                     <div style="display:inline-block;width: 55mm;padding-left: 0px;border: 1px solid green;">
                         <span t-field="o.partner_id.phone"/><span t-field="o.partner_id.mobile"/>
                     </div>
@@ -77,8 +77,8 @@
             </xpath>
 
             <xpath expr='//table[@name="invoice_line_table"]' position="replace">
-                <div style="width:140mm; height:75mm"/>
-                <div  style="height:164mm;font-family:'Arial','sans-serif';font-size: 10pt;line-height: 2;letter-spacing: normal;">
+                <div style="width:140mm; height:89mm"/>
+                <div  style="height:164mm;font-family:'Arial','sans-serif';font-size: 10pt;line-height: 2;letter-spacing: 2.3pt;">
                     <table name="invoice_line_table" >
                         <tbody >
                             <t t-set="current_subtotal" t-value="0"/>
@@ -94,17 +94,17 @@
                                         <td style="width: 8mm;"/>
                                         <td name="account_invoice_line_name" style="width: 95mm;"><span t-field="line.name"/></td>
                                         <t t-if="display_discount" >
-                                            <td t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}" style="width: 15mm;">
+                                            <td t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}" style="text-align: right;width: 17mm;">
                                                 <span class="text-nowrap" t-field="line.discount"/>
                                             </td>
                                         </t>
                                         <t t-else="">
-                                            <td style="width: 15mm;"/>
+                                            <td style="width: 17mm;"/>
                                         </t>
-                                        <td t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}" style="width: 22mm;">
+                                        <td t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}" style="text-align: right;width: 25mm;">
                                             <span class="text-nowrap" t-field="line.price_unit"/>
                                         </td>
-                                        <td class="text-right" style="width: 35mm;text-align: right;margin-right: 1px;padding-left: 1px;padding-right: 20px;border: 1px solid blue;">
+                                        <td class="text-right" style="width: 30mm;text-align: right;margin-right: 1px;padding-left: 1px;padding-right: 20px;border: 1px solid blue;">
                                             <span class="text-nowrap" t-field="line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
                                         </td>
                                     </t>
@@ -116,38 +116,38 @@
                 <div style="width: 140mm;height: 25mm;"/>
             </xpath>
             <xpath expr='//div[@id="total"]' position="replace">
-                <div id="total" style="border: 1px solid black;font-family:'Arial','sans-serif';font-size: 10pt;line-height: 2;letter-spacing: 2.3pt;">
+                <div id="total" style="font-family:'Arial','sans-serif';font-size: 10pt;line-height: 2;letter-spacing: 2.3pt;">
                         <table >
                             <tr>
-                                <td style="width: 150mm;height: 7mm;"/>
-                                <td class="text-right"  style="width: 40mm;height: 7mm;">
+                                <td style="width: 160mm;height: 7mm;"/>
+                                <td class="text-right"  style="text-align: right;width: 35mm;height: 7mm;">
                                     <span t-field="o.amount_untaxed"/>
                                 </td>
                             </tr>
                             <t t-foreach="o.amount_by_group" t-as="amount_by_group">
                                 <tr>
                                     <t t-if="len(o.line_ids.filtered(lambda line: line.tax_line_id)) in [0, 1] and o.amount_untaxed == amount_by_group[2]">
-                                        <td class="text-right" style="width: 150mm;height: 7mm;"><span class="text-nowrap" t-esc="amount_by_group[0]"/></td>
-                                        <td class="text-right" style="width: 40mm;height: 7mm;">
+                                        <td class="text-right" style="text-align: right;width: 160mm;height: 7mm;"><span class="text-nowrap" t-esc="amount_by_group[0]"/></td>
+                                        <td class="text-right" style="text-align: right;width: 35mm;height: 7mm;">
                                             <span class="text-nowrap" t-esc="amount_by_group[3]" />
                                         </td>
                                     </t>
                                     <t t-else="">
-                                        <td style="width: 150mm;height: 7mm;">
+                                        <td style="text-align: right;width: 160mm;height: 7mm;">
                                             <span t-esc="amount_by_group[0]"/>
                                             <span class="text-nowrap"> on
                                                 <t t-esc="amount_by_group[4]"/>
                                             </span>
                                         </td>
-                                        <td class="text-right" style="width: 45mm;height: 7mm;">
+                                        <td class="text-right" style="text-align: right;width: 35mm;height: 7mm;">
                                             <span class="text-nowrap" t-esc="amount_by_group[3]"/>
                                         </td>
                                     </t>
                                 </tr>
                             </t>
                             <tr>
-                                <td style="width: 150mm;height: 7mm;"/>
-                                <td class="text-right" style="width: 40mm;height: 7mm;">
+                                <td style="width: 160mm;height: 7mm;"/>
+                                <td class="text-right" style="text-align: right;width: 35mm;height: 7mm;">
                                     <span class="text-nowrap" t-field="o.amount_total"/>
                                 </td>
                             </tr>
